<resources>
    <string name="app_name">Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="merhindese">Merchandise</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="signOut">Sign Out</string>
    <string name="loginbut">Login</string>
    <string name="addtocartbut">Add To Cart</string>
    <string name="details">Details:</string>
    <string name="price">Price:</string>
    <string name="addToCart">Add To Cart</string>
    <string name="removeFromCart">Remove From Cart</string>
    <string name="buyItems">"Buy "</string>
    <string name="cartFrag">Cart</string>
    <string name="merchFrag">Merchandise</string>
    <string name="loginFrag">Login</string>
    <string name="detailsFrag">Details</string>
    <string name="emailFrag" translatable="false">Email</string>
    <string name="orderFrag">Orders</string>
    <string name="spalshFrag">Hello</string>
    <string name="email">Support</string>
    <string name="itemPrice">Price: €</string>
    <string name="totalPrice">Total Price: €</string>
    <string name="orderID">Order ID:</string>

</resources>