<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="eif.viko.lt.project.Fragments.HomeFragment"
        android:label="@string/merchFrag"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <argument
            android:name="item"
            app:argType="eif.viko.lt.project.Model.Item"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="eif.viko.lt.project.Fragments.LoginFragment"
        android:label="@string/loginFrag"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="eif.viko.lt.project.OnBoardingScreen.SplashScreenFragment"
        android:label="@string/spalshFrag"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_splashScreenFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="eif.viko.lt.project.Fragments.CartFragment"
        android:label="@string/cartFrag"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_cartItemDetailFragment"
            app:destination="@id/cartItemDetailFragment" />
        <argument
            android:name="item"
            app:argType="eif.viko.lt.project.Model.Item"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="eif.viko.lt.project.Fragments.DetailsFragment"
        android:label="@string/detailsFrag"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="item"
            app:argType="eif.viko.lt.project.Model.Item"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="eif.viko.lt.project.Fragments.OrderFragment"
        android:label="@string/orderFrag"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_orderFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
        <argument
            android:name="order"
            app:argType="eif.viko.lt.project.Model.Order"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/emailFragment"
        android:name="eif.viko.lt.project.Fragments.EmailFragment"
        android:label="@string/email"
        tools:layout="@layout/fragment_email" />
    <fragment
        android:id="@+id/cartItemDetailFragment"
        android:name="eif.viko.lt.project.Fragments.CartItemDetailFragment"
        android:label="@string/detailsFrag"
        tools:layout="@layout/fragment_cart_item_detail" >
        <argument
            android:name="item"
            app:argType="eif.viko.lt.project.Model.Item"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="eif.viko.lt.project.Fragments.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" >
        <argument
            android:name="order"
            app:argType="eif.viko.lt.project.Model.Order"
            app:nullable="true" />
    </fragment>
</navigation>